# goIt-homework-fstAPI-mail

./: alembic.ini  compose.yaml  config.py  fill_database.py  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 0678c78e420e_init.py  23a09cc3b170_user_id_added.py  63fd8ba1dbe0_userpic_field_added.py  9980ea9a7d54_confirmed_field_added.py  a3ea3cea032b_.py  c90090423476_init.py
api/: auth.py  contacts_router.py
dependencies/: cloudinary_client.py  database.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
models/: contacts.py
repository/: contacts.py  users.py
schemas/: contacts.py  users.py
services/: auth.py  contacts.py  email.py
tests/: conftest.py  test.db  test_route_auth.py
tests/repository/: test_contacts.py  test_users.py
